1.3.0
  - *new* option, 'anoncmds' in section 'matrix', where previously only
    the 'anonymous' user was a legitimate synonym, you may now provide
    many different ones -- humorously, you could provide 'root'.
1.2.0
  - *removed*: x84.bbs.log.ColoredConsoleHandler.
    If you see exception: ``ImportError: No module named log``
    simply change line, ``class = x84.bbs.log.ColoredConsoleHandler``
    to new line, ``class = logging.StreamHandler``
    in your ~/.x84/logging.ini or /etc/x84/logging.ini file!
  - new bulletins, userlist, from hellbeard
  - new door 'sesame.py' script, from maze
  - project 'blessed' has been merged. Some minor API changes that
    currently just emit a DeprecationWarning, will be removed in 2.0,
    especially in regards to sequence-safe textwrap() function, one
    should instead use term.wrap().
  - project 'wcwidth' has been merged. No change.
  - move_x now works for screen/etc. TERM types (fixed in blessed).
  - ssh server support: for existing servers, simply add a new section
    to your default.ini::
    [ssh]
    addr = 127.0.0.1
    port = 6022
    hostkey = /my/path/to/.x84/ssh_host_rsa_key
    hostkeybits = 2048
  - rudimentary web.py-based web server module (webserve.py) for API
    endpoints.
    This requires both pyOpenSSL and web.py packages, which are not
    installed by default by setup.py. It is configured with the [web]
    default.ini section (the "chain" setting is optional; only use it
    if you have a chained cert):
    [web]
    addr = 0.0.0.0
    port = 1984
    cert = /home/bbs/ssl.cer
    key = /home/bbs/ssl.key
    chain = /home/bbs/chain.cer
  - message network server web API endpoint (webmodules/msgserve.py).
  - message network REST client for pull/push (msgpoll.py).

1.1.0
  - resolve issue #53: using upstream 'blessed' fork.
  - fix issue #38: chat buffer lost on resize
  - fix issue #43: bordering math issues in msgreader
  - pull request #46, #47, #50, #54: misc. dropfile bugfixes (haliphax)